server/src/demo7-grpc/envoy.yaml
admin:
  access_log_path: /tmp/admin_access.log
  address:
    socket_address: { address: 0.0.0.0, port_value: 9901 }
static_resources:
  listeners:
    - name: listener_0
      address:
        socket_address: { address: 0.0.0.0, port_value: 9211 }
      filter_chains:
        - filters:
            - name: envoy.http_connection_manager
              config:
                generate_request_id: true
                tracing:
                  request_headers_for_tags:
                    - message
                  operation_name: egress
                codec_type: auto
                stat_prefix: ingress_http
                route_config:
                  name: local_route
                  virtual_hosts:
                    - name: local_service
                      domains: ["*"]
                      routes:
                        - match: { prefix: "/" }
                          route: { cluster: demo_service }
                      cors:
                        allow_origin:
                          - "*"
                        allow_methods: GET, PUT, DELETE, POST, OPTIONS
                        allow_headers: keep-alive,user-agent,cache-control,content-type,content-transfer-encoding,message,x-accept-content-transfer-encoding,x-accept-response-streaming,x-user-agent,x-grpc-web
                        max_age: "1728000"
                        expose_headers: message,grpc-status,grpc-message
                http_filters:
                  - name: envoy.grpc_web
                  - name: envoy.cors
                  - name: envoy.router
  clusters:
    - name: demo_service
      connect_timeout: 0.2s
      type: strict_dns
      http2_protocol_options: {}
      lb_policy: least_request
      hosts: [{ socket_address: { address: server-demo7, port_value: 13007 }}]
